<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/turismo_avantic"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nombredeestado"
        app:layout_constraintStart_toStartOf="@+id/nombredeestado"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombredeestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/pereira"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloapp" />

    <TextView
        android:id="@+id/descripcionestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descripcion_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombredeestado" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionestado">

        <ImageView
            android:id="@+id/weathericon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/weatericon"
            app:srcCompat="@drawable/weathericon" />

        <ImageView
            android:id="@+id/populationicon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/populationicon"
            app:srcCompat="@drawable/_3_833772_noun_project_icon_population_png_clipart_png" />

        <ImageView
            android:id="@+id/altitudeicon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:contentDescription="@string/altitudeicon"
            app:srcCompat="@drawable/_727320" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/temperatura" />

        <TextView
            android:id="@+id/habitantes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/_477k_habitantes" />

        <TextView
            android:id="@+id/altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/_1411_msnm" />
    </TableRow>

    <TextView
        android:id="@+id/sitiosrecomendados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sitiosrecomendados"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitiosrecomendados">

        <ImageView
            android:id="@+id/sitio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sitio1"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombresitio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parque_olaya_herrera" />

            <TextView
                android:id="@+id/descripcionsitio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcionsitio1" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <ImageView
            android:id="@+id/sitio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sitio1"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombresitio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/catedral" />

            <TextView
                android:id="@+id/descripcionsitio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionsitio2" />
        </LinearLayout>

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>